// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: error, compact: false, readOnly: false and clear: false 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-error);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-error);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-error);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: error, compact: false, readOnly: false and clear: true 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-error);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-error);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-error);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: none, compact: false, readOnly: false and clear: false 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-primary);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-primary);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: none, compact: false, readOnly: false and clear: false 2`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-primary);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-primary);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: none, compact: false, readOnly: false and clear: true 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-primary);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-primary);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: success, compact: false, readOnly: false and clear: true 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-success);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-success);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-success);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: false, state: success, compact: false, readOnly: false and clear: true 2`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-success);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-success-frosted-soft);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-success);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-success);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: error, compact: false, readOnly: false and clear: false 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-error);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-error);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-error);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: error, compact: false, readOnly: false and clear: false 2`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-error);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-error);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-error);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: none, compact: false, readOnly: false and clear: true 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-primary);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-primary);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: none, compact: false, readOnly: false and clear: true 2`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-primary);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}

@media(hover:hover) {
  .wrapper:hover:not(.button:hover), .label-wrapper:hover~.wrapper {
    border-color: var(--p-color-primary);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: success, compact: true, readOnly: true and clear: true 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 0.64285714;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-success);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted);
  color: var(--p-color-contrast-medium);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-color: transparent;
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-success);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: false, hideLabel: true, state: success, compact: true, readOnly: true and clear: true 2`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 0.64285714;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-success);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted);
  color: var(--p-color-contrast-medium);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  border-color: transparent;
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-success);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-success);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.button {
  padding: var(--ref-p-input-slotted-padding);
  margin: var(--ref-p-input-slotted-margin);
}
@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: false, loading: true, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: false, readOnly: false and clear: false 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: text;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-primary);
}
.spinner {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media (forced-colors: active) {
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: true, loading: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, compact: false, readOnly: false and clear: false 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
  opacity: 0.4 !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  pointer-events: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
@media (forced-colors: active) {
  :host {
    opacity: 1 !important;
    color: GrayText !important;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted);
  color: var(--p-color-primary);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-primary);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  pointer-events: none;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media(min-width:1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: -4px;
  }
}

@media (forced-colors: active) {
  .wrapper {
    border-color: GrayText !important;
  }
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
    border-color: GrayText;
  }
  .label {
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for disabled: true, loading: true, hideLabel: true, state: error, compact: false, readOnly: false and clear: false 1`] = `
":host {
  display: block;
  --p-internal-input-base-scaling: 1;
  --ref-p-input-slotted-padding: calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714)) !important;
  --ref-p-input-slotted-margin: calc(-1 * calc(11.2px * (var(--p-internal-input-base-scaling) - 0.64285714))) !important;
  opacity: 0.4 !important;
}
:host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
  pointer-events: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  all: unset;
  flex: 1;
  width: max(100%, 2ch);
  height: 100%;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-overflow: ellipsis;
}
input::-webkit-search-cancel-button {
  display: none;
}
@media (forced-colors: active) {
  :host {
    opacity: 1 !important;
    color: GrayText !important;
  }
}

.root {
  display: grid;
  gap: 4px;
}
.wrapper {
  display: flex;
  align-items: center;
  gap: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 4px);
  height: calc(var(--p-internal-input-base-scaling) * 3.5rem);
  box-sizing: border-box;
  padding-inline: calc(22.4px * (var(--p-internal-input-base-scaling) - 0.64285714) + 8px);
  border: 1px solid var(--p-color-error);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.wrapper:not(:has(input:disabled)):focus-within {
  border-color: var(--p-color-error);
}
.spinner {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem / calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
  pointer-events: none;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  margin-top: -4px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  transition: color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1), opacity var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .wrapper {
    border-color: GrayText !important;
  }
  .wrapper:not(:has(input:disabled)):focus-within {
    outline: 2px solid Highlight;
    outline-offset: 2px;
    border-color: GrayText;
  }
  .label {
    color: GrayText;
  }
}
"
`;
